@@ -2,7 +2,7 @@
  OmegaT 5.7.0
 ----------------------------------------------------------------------
   3 Enhancements
-  1 Bug fix
+  2 Bug fixes
   1 Localisation updates
 ----------------------------------------------------------------------
 5.7.0 vs 5.6.0
@@ -11,6 +11,9 @@
 
   - Dictionary pane update is extremely slow for large articles
   https://sourceforge.net/p/omegat/bugs/1068/
+
+  - Menus don't get keyboard focus after opening
+  https://sourceforge.net/p/omegat/bugs/1073/
 
   Implemented requests:
 
